# TXTeditor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vector-lsp.lock.json
scripts/: app-startup-smoke.mjs  baseline-contract.mjs  baseline-paths.mjs  build-json-editor.js  build-release-sanitized.ps1  build-web.js  clean.js  dev-server.js  fixture-names.mjs  generate-fixture.js  generate-tauri-icons.js  lint-compare.js  perf-bulk-ops.js  perf-test.js  refactor-metrics.mjs  vector-lsp-runtime-smoke.mjs
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_bootstrap.rs  clipboard.rs  config.rs  file_io.rs  launch_paths.rs  lib.rs  lsp_file_watcher.rs  lsp_protocol.rs  lsp_service.rs  main.rs  native_paths.rs  reference_data.rs  workspace_files.rs
tests/: app-controller.test.js  app-settings.test.js  app-shell.test.js  app-startup.test.js  clipboard-runtime.test.js  core.test.js  data-integrity-regression.test.js  diagnostics-burst-regression.test.js  diagnostics-ui-optimization-regression.test.js  freeze-controls.test.js  freeze-state-persistence.test.js  grid-policy.test.js  i18n-source-audit.test.js  i18n.test.js  issue-61-json-go-to-line.test.js  issue-62-json-diagnostic-crlf.test.js  issue-66-json-panel-controls.test.js  issue-73-cell-input.test.js  issue-74-diagnostic-copy.test.js  issue-75-button-feedback.test.js  issue-76-find-all.test.js  issue-77-manual-highlights.test.js  json-document-tabs.test.js  legacy-lint-i18n.test.js  lint-cube-binary-revalidation.test.js  (+22 more)
(+125 files in other folders)
