[package]
name = "txteditor"
version = "0.4.1"
description = "TXTeditor 0.4.1 - a fast tabular text editor"
authors = ["yinyin333333"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "txteditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "txteditor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync", "time"] }
