[package]
name = "txteditor"
version = "0.4.7"
description = "TXTeditor 0.4.7 - a fast tabular text editor"
authors = ["yinyin333333"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "txteditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "txteditor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
globset = "0.4.16"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync", "time"] }
